# osint-persona-cn

./: .gitignore  AGENTS.md  LICENSE  README.md  browser-sync.bat  pyproject.toml  start-osint-web.bat  stop-osint-web.bat  sync-cookies-admin.bat  sync-cookies.bat  停止情报台.bat  启动情报台.bat
config/: config.example.yaml
docs/: AI_CONTROL.md  ARCHITECTURE.md  CAPABILITIES.md  CONTRIBUTING.md  GETTING_STARTED.md  MANUAL_TEST.md  PRIVACY.md  WEB_UI.md  ZHIHU_PERSONA.md
extension/: README.md  background.js  manifest.json
scripts/: create-desktop-shortcut.ps1  ingest_probe.py  ingest_probe_deep.py  install-browser-sync.ps1  probe_aicu.py  probe_recent_viewed.py  probe_zhihu_apis.py  probe_zhihu_browse.py  probe_zhihu_browse_pw.py  probe_zhihu_sankichu.py  run_e2e_flow.py  run_e2e_verify.py  start-web.ps1  stop-web.ps1  sync-cookies.ps1  test_read_history.py  test_read_history_struct.py  wbi_likes_probe.py  web_acceptance.py  zhihu_votes_probe.py
tests/: test_ai_client.py  test_ai_relevance.py  test_aicu_comment.py  test_alias_discover.py  test_analyzers.py  test_ask_context.py  test_bilibili_account.py  test_bilibili_article_search.py  test_bilibili_followings.py  test_bilibili_likes.py  test_bilibili_media.py  test_bilibili_sdk.py  test_bilibili_wbi.py  test_browser_history.py  test_browser_sync.py  test_browser_sync_pages.py  test_config.py  test_cookie_sync.py  test_cookies_playwright.py  test_dependencies.py  test_domain.py  test_dwell_save.py  test_entity_store.py  test_events_insights.py  test_extension_errors.py  test_extension_events.py  test_extension_reply_post.py  (+69 more)
(+178 files in other folders)
